# imt-benchmarks

./: README.md  package.json
imt-browser-benchmarks/: package-lock.json  package.json
imt-browser-benchmarks/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
imt-browser-benchmarks/.next/cache/: .tsbuildinfo
imt-browser-benchmarks/.next/cache/eslint/: .cache_1g0s26r
imt-browser-benchmarks/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
imt-browser-benchmarks/.next/server/app/: _not-found.rsc  browser.html  browser.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
imt-browser-benchmarks/.next/server/chunks/: 347.js
imt-browser-benchmarks/.next/server/pages/: 404.html  500.html
imt-browser-benchmarks/.next/static/chunks/: main-app-8c61932bf1d289c6.js  main-dd7669307e53b35c.js
imt-browser-benchmarks/.next/types/app/: layout.ts  (+1 more)
imt-browser-benchmarks/src/: App.tsx  routes.tsx
imt-browser-benchmarks/src/components/: Header.tsx  ViewSourceCode.tsx
imt-browser-benchmarks/src/pages/: Browser.tsx
imt-browser-benchmarks/src/utils/: generate-benchmarks.ts  wasm-loader.ts
imt-node-benchmarks/: package-lock.json  package.json
imt-node-benchmarks/src/: main.ts
imt-poseidon-rs/: Cargo.toml
imt-poseidon-rs/src/: hash.rs  imt.rs
(+20 files in other folders)
