[package]
name = "imt-poseidon-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
light-poseidon = "0.2.0"
wasm-bindgen = "0.2.93"
num-bigint = "0.4.6"

# Check this. Stuck optimizing if left in true
[package.metadata.wasm-pack.profile.release]
wasm-opt = false